2007-12-13  David A. Capello  <dacap@users.sourceforge.net>

	* src/dialogs/scrsaver.c: Removed.

2007-12-11  David A. Capello  <dacap@users.sourceforge.net>

	* src/script/functions.c (NewSprite): Added.

	* src/raster/sprite.c (sprite_set_imgtype): Added convertion of
	the background color.

	* config.h: Added ase_uint8, ase_uint16, ase_uint32 to support 64
	bits CPU (problems with amd64 reported by Jon Rafkind).

2007-12-08  David A. Capello  <dacap@users.sourceforge.net>

	* src/file/png_format.c (save_PNG): Fixed a problem when saving
	non-indexed images (reported by Trent Gamblin).

2007-12-06  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/editor/editor.c (editor_draw_sprite): Fixed to allow
	differents indexed images in multiple editors in a screen
	color-depth > 8bpp.

	* src/util/misc.c (interactive_move_layer): Fixed problem with
	scroll in windowed moded and mouse-paint problem in
	double-buffering mode.

2007-12-05  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/statebar.c (status_bar_set_text): Uses dirty
	region. This optimized the speed of the loading bar.

	* src/jinete/jsystem.c (ji_flip_dirty_region): Added dirty region.

	* src/file/png_format.c (save_png): Added.

2007-12-03  David A. Capello  <dacap@users.sourceforge.net>

	* src/raster/sprite.h (struct Sprite): Added "stock" (now the
	stock of images is shared between all layers).
	(struct Sprite): Added bgcolor field:

	* src/raster/layer.h (struct Layer): Removed the "stock" from the
	layers.

2007-11-28  David A. Capello  <dacap@users.sourceforge.net>

	* src/modules/gui.c (init_module_gui): Better graphics-resolution
	selection by default.

	* src/widgets/tabs.c: Done (finished the buttons to move the
	scroll).

	* jinete/src/jwidget.c (jwidget_pick): Fixed a bug: the disabled
	widgets didn't get the mouse never (so the button-pressed message
	was never sent to disable widgets).

2007-11-25  David A. Capello  <dacap@users.sourceforge.net>
